# laser-rs

./: Cargo.toml
src/: bounds.rs  lib.rs  main.rs  parser.rs  path.rs  style.rs  svg.rs
src/editor/: app.rs  canvas.rs  history.rs  main.rs  mod.rs  svg_doc.rs
src/lbrn2/: bounds.rs  mod.rs  parser.rs  path.rs  style.rs  svg.rs  types.rs
src/vectorize/: mask.rs  mod.rs  trace.rs
tests/: converter_test.rs  editor_test.rs  vectorize_test.rs
