[package]
name = "laser-tools"
version = "0.1.0"
edition = "2024"
description = "CLI tools for laser cutting: LBRN2 to SVG conversion and image vectorization"
license = "MIT"

[lib]
name = "laser_tools"
path = "src/lib.rs"

[[bin]]
name = "laser-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", default-features = false, features = [
  "derive",
  "std",
] }
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "rayon",
  "png",
] }
quick-xml = "0.38.4"
vtracer = { version = "0.6", default-features = false }

[dev-dependencies]
